# rs-grpc-demo

./: Cargo.toml  README.md  run_demo.sh
client/: Cargo.toml
client/src/: main.rs
proto/: build.rs
proto/proto/: student.proto
proto/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
