[workspace]
members = [
    "server",
    "client",
    "proto"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10"
prost = "0.12"
tonic-build = "0.10"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
